tests/unit/default/syntax-error/065-create-table-parens-column-comma-parens.e.t
---- IN ----
+%table(id:int,)
---- OUT ----
---- ERR ----
syntax: expected `)` after `+%table(id:int` near `,)` at position 14 - at line 1
---- EXIT ----
1
